# example-PM

./: .gitignore  CMakeLists.txt  README.md
include/: vs_main.h
include/MyModel/: MyModel.h
src/: DllMain.cpp  MyModel.cpp
